src/snapshots/zeek_language_server__lsp__semantic_tokens__test__encoding.snap
---
source: src/lsp.rs
expression: highlights
---
[
    (
        Position {
            line: 0,
            character: 0,
        },
        SemanticTokenType(
            "constant",
        ),
    ),
    (
        Position {
            line: 0,
            character: 1,
        },
        SemanticTokenType(
            "punctuation",
        ),
    ),
    (
        Position {
            line: 1,
            character: 0,
        },
        SemanticTokenType(
            "comment",
        ),
    ),
]
