src/snapshots/zeek_language_server__lsp__semantic_tokens__test__injection-2.snap
---
source: src/lsp.rs
expression: "tokens(\"/1?/;\")"
---
[
    SemanticTokenType(
        "operator",
    ),
    SemanticTokenType(
        "string",
    ),
    SemanticTokenType(
        "operator",
    ),
    SemanticTokenType(
        "punctuation",
    ),
]
