src/snapshots/zeek_language_server__lsp__semantic_tokens__test__injection-3.snap
---
source: src/lsp.rs
expression: "tokens(\"# @TEST-EXEC: false\")"
---
[
    SemanticTokenType(
        "comment",
    ),
    SemanticTokenType(
        "macro",
    ),
    SemanticTokenType(
        "none",
    ),
    SemanticTokenType(
        "function",
    ),
]
