src/snapshots/zeek_language_server__lsp__semantic_tokens__test__injection-4.snap
---
source: src/lsp.rs
expression: "tokens(\"## ``false``\")"
---
[
    SemanticTokenType(
        "comment",
    ),
    SemanticTokenType(
        "macro",
    ),
]
