src/snapshots/zeek_language_server__lsp__semantic_tokens__test__injection-6.snap
---
source: src/lsp.rs
expression: "tokens(\"##< ``false``\")"
---
[
    SemanticTokenType(
        "comment",
    ),
    SemanticTokenType(
        "macro",
    ),
]
