src/snapshots/zeek_language_server__lsp__semantic_tokens__test__injection.snap
---
source: src/lsp.rs
expression: "tokens(r#\"\"Foo %s\";\"#)"
---
[
    SemanticTokenType(
        "string",
    ),
    SemanticTokenType(
        "embedded",
    ),
    SemanticTokenType(
        "embedded",
    ),
    SemanticTokenType(
        "string",
    ),
    SemanticTokenType(
        "punctuation",
    ),
]
